--- a/settings.json
+++ b/settings.json
@@ -7,48 +7,52 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-    "features": {
-      "edit_prediction_provider": "zed"
+  "features": {
+    "edit_prediction_provider": "zed"
+  },
+  "icon_theme": "Colored Zed Icons Theme Dark",
+  "ui_font_size": 14,
+  "buffer_font_size": 14.6,
+  "theme": {
+    "mode": "dark",
+    "light": "Catppuccin Mocha - No Italics",
+    "dark": "Catppuccin Mocha - No Italics"
+  },
+  "ui_font_family": "Hack Nerd Font",
+  "buffer_font_family": "Hack Nerd Font",
+
+  "outline_panel": {
+    "dock": null,
+    "button": false
+  },
+  "project_panel": {
+    "indent_size": 10
+  },
+  "notification_panel": {
+    "dock": null,
+    "button": false
+  },
+  "collaboration_panel": {
+    "dock": null,
+    "button": false
+  },
+
+  "assistant": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "claude-3-7-sonnet"
     },
-    "notification_panel": {
-      "dock": "left"
-    },
-    "chat_panel": {
-      "dock": "left"
-    },
-    "outline_panel": {
-      "dock": "right"
-    },
-    "icon_theme": "Material Icon Theme",
-    "ui_font_size": 15,
-    "buffer_font_size": 15,
-    "theme": {
-      "mode": "system",
-      "light": "One Light",
-      "dark": "Catppuccin Mocha - No Italics"
-    },
-    "ui_font_family": "Hack Nerd Font",
-    "buffer_font_family": "Hack Nerd Font",
-    "assistant": {
-      "default_model": {
-        "provider": "copilot_chat",
-        "model": "claude-3-7-sonnet"
-      },
-      "version": "2"
-    },
-    "experimental.theme_overrides": {
-      "syntax": {
-        "comment": {
-          "font_style": "normal"
-        }
+    "version": "2"
+  },
+  "experimental.theme_overrides": {
+    "syntax": {
+      "comment": {
+        "font_style": "normal"
       }
-    },
-    "project_panel": {
-      "indent_size": 10
-    },
-    "telemetry": {
-      "diagnostics": false,
-      "metrics": false
     }
+  },
+  "telemetry": {
+    "diagnostics": false,
+    "metrics": false
   }
-  
+}
